--- a/yes_style.css
+++ b/yes_style.css
@@ -38,7 +38,7 @@ body {
     width: 100%;
     height: 100%;
     position: relative;
-    background: url('../Valentine/enve.png') no-repeat center/cover;
+    background: url('./enve.png') no-repeat center/cover;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     border: 8px solid rgb(255, 129, 129);
     border-radius: 15px;
